refactor: 배포 도메인 접근 허가 설정